{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 291,
  "lineage": "63894b5d-3461-a216-8e5e-86683d654ddf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430367037730:internet-gateway/igw-0815087f883aceae3",
            "id": "igw-0815087f883aceae3",
            "owner_id": "430367037730",
            "tags": {
              "Name": "weather-tracker-igw-prod"
            },
            "tags_all": {
              "CloudProvider": "AWS",
              "Environment": "prod",
              "Name": "weather-tracker-igw-prod",
              "Project": "weather-tracker",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ce53b0fa3b75a1be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430367037730:security-group/sg-0a6b0b8af4722478c",
            "description": "Security group for EKS control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6b0b8af4722478c",
            "ingress": [],
            "name": "weather-tracker-eks-control-plane-prod",
            "name_prefix": "",
            "owner_id": "430367037730",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "weather-tracker-eks-control-plane-sg-prod"
            },
            "tags_all": {
              "CloudProvider": "AWS",
              "Environment": "prod",
              "Name": "weather-tracker-eks-control-plane-sg-prod",
              "Project": "weather-tracker",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce53b0fa3b75a1be"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "route53_resolver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430367037730:subnet/subnet-081685dcd83998a73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081685dcd83998a73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "430367037730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "weather-tracker-private-subnet-prod-1",
              "kubernetes.io/role/internal-elb": "1",
              "kubernetes.io/type": "private"
            },
            "tags_all": {
              "CloudProvider": "AWS",
              "Environment": "prod",
              "Name": "weather-tracker-private-subnet-prod-1",
              "Project": "weather-tracker",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1",
              "kubernetes.io/type": "private"
            },
            "vpc_id": "vpc-0ce53b0fa3b75a1be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430367037730:subnet/subnet-0590c60787ec5d1bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0590c60787ec5d1bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "430367037730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "weather-tracker-private-subnet-prod-2",
              "kubernetes.io/role/internal-elb": "1",
              "kubernetes.io/type": "private"
            },
            "tags_all": {
              "CloudProvider": "AWS",
              "Environment": "prod",
              "Name": "weather-tracker-private-subnet-prod-2",
              "Project": "weather-tracker",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1",
              "kubernetes.io/type": "private"
            },
            "vpc_id": "vpc-0ce53b0fa3b75a1be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430367037730:subnet/subnet-0e18cd77496c8f4f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e18cd77496c8f4f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "430367037730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "weather-tracker-public-subnet-prod-1",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/type": "public"
            },
            "tags_all": {
              "CloudProvider": "AWS",
              "Environment": "prod",
              "Name": "weather-tracker-public-subnet-prod-1",
              "Project": "weather-tracker",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/type": "public"
            },
            "vpc_id": "vpc-0ce53b0fa3b75a1be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430367037730:subnet/subnet-0b74369be0e374073",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b74369be0e374073",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "430367037730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "weather-tracker-public-subnet-prod-2",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/type": "public"
            },
            "tags_all": {
              "CloudProvider": "AWS",
              "Environment": "prod",
              "Name": "weather-tracker-public-subnet-prod-2",
              "Project": "weather-tracker",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/type": "public"
            },
            "vpc_id": "vpc-0ce53b0fa3b75a1be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430367037730:vpc/vpc-0ce53b0fa3b75a1be",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-021d6f5b5c2251cf5",
            "default_route_table_id": "rtb-03faa3296bc33f98c",
            "default_security_group_id": "sg-09b81d545f4d1e632",
            "dhcp_options_id": "dopt-0e914bb680d193708",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ce53b0fa3b75a1be",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03faa3296bc33f98c",
            "owner_id": "430367037730",
            "tags": {
              "Name": "weather-tracker-vpc-prod"
            },
            "tags_all": {
              "CloudProvider": "AWS",
              "Environment": "prod",
              "Name": "weather-tracker-vpc-prod",
              "Project": "weather-tracker",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}